--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -107,3 +107,28 @@ nav {
     color: rgba(255, 96, 96, 1);
   }
 }
+
+.jumiar {
+
+  .jumiar-deats {
+    font-family: "Sf Pro Text";
+    color: rgba(130, 130, 130, 1);
+    font-size: 15.4px;
+    line-height: 30px;
+  }
+}
+
+.gt {
+
+  .gt-deats {
+    font-family: "Sf Pro Text";
+    color: rgba(130, 130, 130, 1);
+    font-size: 15.4px;
+    line-height: 30px;
+  }
+}
+
+
+.contacts {
+  font-family: 'Sf Pro Text';
+}
