--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -17,4 +17,34 @@
 .more-on-youtube .block {
   background-color: #141217;
 }
+
+.jumiar .case-study {
+  position: relative;
+}
+
+.jumiar .case-study::before {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #333;
+}
+
+.jumiar .case-study::after {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: #333;
+}
+
+.jumiar .deats {
+  font-family: "Sf Pro Text";
+  color: #828282;
+  font-size: 13px;
+}
 /*# sourceMappingURL=style.css.map */
