--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Sf Pro Text';
     src: url('FontsFree-Net-SFProText-Regular.ttf');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
 }
