--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,7 +4,7 @@
 
 .contributions {
   .grid-div {
-    div {
+    .presently, .memoji, .desktop-mockup {
       border: 1px solid #333333;
     }
   }
