--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -6,25 +6,23 @@
   // }
 
   .num {
+    position: relative;
     color: rgba(96, 88, 116, 1);
 
-    &::before {
-      content: "";
-      position: absolute;
-      width: 5px;
-      height: 5px;
-      border-radius: 50%;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      -ms-border-radius: 50%;
-      -o-border-radius: 50%;
-      background: rgba(96, 88, 116, 1);
-      transform: translate(25px, 12px);
-      -webkit-transform: translate(25px, 12px);
-      -moz-transform: translate(25px, 12px);
-      -ms-transform: translate(25px, 12px);
-      -o-transform: translate(25px, 12px);
-    }
+//     &::before {
+//       content: "";
+//       position: absolute;
+//       width: 5px;
+//       height: 5px;
+//       top: 50%;
+//       left: 4%;
+//       border-radius: 50%;
+//       -webkit-border-radius: 50%;
+//       -moz-border-radius: 50%;
+//       -ms-border-radius: 50%;
+//       -o-border-radius: 50%;
+//       background: rgba(96, 88, 116, 1);
+// }
   }
 
   // .deats {
