--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -1,3 +1,6 @@
+nav
+
+
 .featured-projects {
   // .p-text {
   //   font-size: 130px;
@@ -7,7 +10,7 @@
 
   .num {
     position: relative;
-    color: rgba(96, 88, 116, 1);
+    // color: rgba(96, 88, 116, 1);
 
 //     &::before {
 //       content: "";
