--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -1,5 +1,137 @@
-nav
+nav {
+  .nav-container {
+    .logo a .letter {
+      transition: transform 0.2s;
+    }
 
+    .logo a .letter:nth-child(1) {
+      transition-delay: 0.28s;
+    }
+
+    .logo a .letter:nth-child(2) {
+      transition-delay: 0.26s;
+    }
+
+    .logo a .letter:nth-child(3) {
+      transition-delay: 0.24s;
+    }
+
+    .logo a .letter:nth-child(4) {
+      transition-delay: 0.22s;
+    }
+
+    .logo a .letter:nth-child(5) {
+      transition-delay: 0.2s;
+    }
+
+    .logo a .letter:nth-child(6) {
+      transition-delay: 0.18s;
+    }
+
+    .logo a .letter:nth-child(7) {
+      transition-delay: 0.16s;
+    }
+
+    .logo a .letter:nth-child(8) {
+      transition-delay: 0.14s;
+    }
+
+    .logo a .letter:nth-child(9) {
+      transition-delay: 0.12s;
+    }
+
+    .logo a .letter:nth-child(10) {
+      transition-delay: 0.10s;
+    }
+
+    .logo a .letter:nth-child(11) {
+      transition-delay: 0.08s;
+    }
+
+    .logo a .letter:nth-child(12) {
+      transition-delay: 0.06s;
+    }
+
+    .logo a .letter:nth-child(13) {
+      transition-delay: 0.04s;
+    }
+
+    .logo a .letter:nth-child(14) {
+      transition-delay: 0.02s;
+    }
+
+    .logo a .letter:nth-child(15) {
+      transition-delay: 0.00s;
+    }
+
+    .logo:hover a .letter {
+      transform: translateX(10px);
+      -webkit-transform: translateX(10px);
+      -moz-transform: translateX(10px);
+      -ms-transform: translateX(10px);
+      -o-transform: translateX(10px);
+    }
+
+    .logo:hover a .letter:nth-child(1) {
+      transition-delay: 0.12s;
+    }
+
+    .logo:hover a .letter:nth-child(2) {
+      transition-delay: 0.14s;
+    }
+
+    .logo:hover a .letter:nth-child(3) {
+      transition-delay: 0.16s;
+    }
+
+    .logo:hover a .letter:nth-child(4) {
+      transition-delay: 0.18s;
+    }
+
+    .logo:hover a .letter:nth-child(5) {
+      transition-delay: 0.20s;
+    }
+
+    .logo:hover a .letter:nth-child(6) {
+      transition-delay: 0.22s;
+    }
+
+    .logo:hover a .letter:nth-child(7) {
+      transition-delay: 0.24s;
+    }
+
+    .logo:hover a .letter:nth-child(8) {
+      transition-delay: 0.26s;
+    }
+    .logo:hover a .letter:nth-child(9) {
+      transition-delay: 0.28s;
+    }
+
+    .logo:hover a .letter:nth-child(10) {
+      transition-delay: 0.3s;
+    }
+
+    .logo:hover a .letter:nth-child(11) {
+      transition-delay: 0.32s;
+    }
+
+    .logo:hover a .letter:nth-child(12) {
+      transition-delay: 0.34s;
+    }
+
+    .logo:hover a .letter:nth-child(13) {
+      transition-delay: 0.36s;
+    }
+
+    .logo:hover a .letter:nth-child(14) {
+      transition-delay: 0.38s;
+    }
+
+    .logo:hover a .letter:nth-child(15) {
+      transition-delay: 0.40s;
+    }
+  }
+}
 
 .featured-projects {
   // .p-text {
@@ -12,20 +144,20 @@ nav
     position: relative;
     // color: rgba(96, 88, 116, 1);
 
-//     &::before {
-//       content: "";
-//       position: absolute;
-//       width: 5px;
-//       height: 5px;
-//       top: 50%;
-//       left: 4%;
-//       border-radius: 50%;
-//       -webkit-border-radius: 50%;
-//       -moz-border-radius: 50%;
-//       -ms-border-radius: 50%;
-//       -o-border-radius: 50%;
-//       background: rgba(96, 88, 116, 1);
-// }
+    //     &::before {
+    //       content: "";
+    //       position: absolute;
+    //       width: 5px;
+    //       height: 5px;
+    //       top: 50%;
+    //       left: 4%;
+    //       border-radius: 50%;
+    //       -webkit-border-radius: 50%;
+    //       -moz-border-radius: 50%;
+    //       -ms-border-radius: 50%;
+    //       -o-border-radius: 50%;
+    //       background: rgba(96, 88, 116, 1);
+    // }
   }
 
   // .deats {
@@ -70,5 +202,5 @@ nav
 }
 
 .font-sf {
-  font-family: 'Sf Pro Text';
+  font-family: "Sf Pro Text";
 }
