--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -41,7 +41,7 @@ nav {
     }
 
     .logo a .letter:nth-child(10) {
-      transition-delay: 0.10s;
+      transition-delay: 0.1s;
     }
 
     .logo a .letter:nth-child(11) {
@@ -61,7 +61,7 @@ nav {
     }
 
     .logo a .letter:nth-child(15) {
-      transition-delay: 0.00s;
+      transition-delay: 0s;
     }
 
     .logo:hover a .letter {
@@ -89,7 +89,7 @@ nav {
     }
 
     .logo:hover a .letter:nth-child(5) {
-      transition-delay: 0.20s;
+      transition-delay: 0.2s;
     }
 
     .logo:hover a .letter:nth-child(6) {
@@ -128,7 +128,119 @@ nav {
     }
 
     .logo:hover a .letter:nth-child(15) {
-      transition-delay: 0.40s;
+      transition-delay: 0.4s;
+    }
+
+    .navlist {
+      ul {
+        li:nth-child(1) {
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+
+        li:nth-child(2) {
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+
+        li:nth-child(3) {
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+      }
     }
   }
 }
