--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -131,6 +131,133 @@ nav {
       transition-delay: 0.4s;
     }
 
+    .home-navlist {
+      ul {
+        li:nth-child(1) {
+          transform: translateY(20px);
+          -webkit-transform: translateY(20px);
+          -moz-transform: translateY(20px);
+          -ms-transform: translateY(20px);
+          -o-transform: translateY(20px);
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+
+        li:nth-child(2) {
+          transform: translateY(20px);
+          -webkit-transform: translateY(20px);
+          -moz-transform: translateY(20px);
+          -ms-transform: translateY(20px);
+          -o-transform: translateY(20px);
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+
+        li:nth-child(3) {
+          transform: translateY(20px);
+          -webkit-transform: translateY(20px);
+          -moz-transform: translateY(20px);
+          -ms-transform: translateY(20px);
+          -o-transform: translateY(20px);
+          a {
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 50%;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.5s ease-in-out;
+              -moz-transition: 0.5s ease-in-out;
+              -ms-transition: 0.5s ease-in-out;
+              -o-transition: 0.5s ease-in-out;
+            }
+
+            &:hover::after {
+              content: "";
+              position: absolute;
+              width: 100%;
+              height: 1px;
+              background-color: white;
+              bottom: -30%;
+              left: 0;
+              transition: 0.3s ease-in-out;
+              -webkit-transition: 0.3s ease-in-out;
+              -moz-transition: 0.3s ease-in-out;
+              -ms-transition: 0.3s ease-in-out;
+              -o-transition: 0.3s ease-in-out;
+            }
+          }
+        }
+      }
+    }
+
     .navlist {
       ul {
         li:nth-child(1) {
@@ -318,21 +445,6 @@ nav {
         -ms-transition: 800ms;
         -o-transition: 800ms;
       }
-
-      &:hover::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 100%;
-        width: 100%;
-        height: 100px;
-        background: rgba(130, 130, 130, 1);
-        transition: 800ms;
-        -webkit-transition: 800ms;
-        -moz-transition: 800ms;
-        -ms-transition: 800ms;
-        -o-transition: 800ms;
-      }
     }
   }
 }
@@ -350,6 +462,7 @@ nav {
 .texts-container {
   .lets-talk {
     position: relative;
+    z-index: 2;
 
     &::after {
       content: "";
@@ -358,17 +471,33 @@ nav {
       left: 0;
       width: 100%;
       height: 1px;
-      background-color: #f1f1f1;
+      border-top: 1px solid #f1f1f1;
+      border-right: solid transparent;
+      border-left: solid transparent;
+      transition: 500ms;
+      -webkit-transition: 500ms;
+      -moz-transition: 500ms;
+      -ms-transition: 500ms;
+      -o-transition: 500ms;
     }
 
-    &::after {
+    &:hover::after {
       content: "";
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 1px;
-      background-color: #f1f1f1;
+      height: 100%;
+      border-top: 1px solid #f1f1f1;
+      border-bottom: 1px solid #f1f1f1;
+      border-right: solid transparent;
+      border-left: solid transparent;
+      z-index: 1;
+      transition: 500ms;
+      -webkit-transition: 500ms;
+      -moz-transition: 500ms;
+      -ms-transition: 500ms;
+      -o-transition: 500ms;
     }
   }
 }
