--- a/src/sass/cursor.scss
+++ b/src/sass/cursor.scss
@@ -35,7 +35,7 @@
     display: block;
     width: 48px;
     height: 48px;
-    background-color: white;
+    // background-color: white;
     transform: scale(0.2);
     border-radius: 50%;
     -webkit-border-radius: 50%;
