--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,6 @@
-// body {
-//     background-color: black;
-// }
+html {
+    scroll-behavior: smooth;
+}
 
 .contributions {
   .grid-div {
@@ -64,7 +64,6 @@ footer {
         left: 0;
         width: 100%;
         height: 1px;
-        background-color: #f1f1f1;
       }
 
       &::after {
@@ -74,7 +73,6 @@ footer {
         left: 0;
         width: 100%;
         height: 1px;
-        background-color: #f1f1f1;
       }
     }
   }
@@ -142,4 +140,21 @@ footer {
 
 .light-svg {
   visibility: visible;
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #909090;
+}
+
+::-webkit-scrollbar-track-piece:vertical:end {
+    background: transparent;
 }
