--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -274,7 +274,7 @@ nav {
               position: absolute;
               width: 0%;
               height: 1px;
-              background-color: white;
+              // background-color: white;
               bottom: -30%;
               left: 50%;
               transition: 0.3s ease-in-out;
@@ -471,9 +471,6 @@ nav {
       left: 0;
       width: 100%;
       height: 1px;
-      border-top: 1px solid #f1f1f1;
-      border-right: solid transparent;
-      border-left: solid transparent;
       transition: 500ms;
       -webkit-transition: 500ms;
       -moz-transition: 500ms;
@@ -488,8 +485,6 @@ nav {
       left: 0;
       width: 100%;
       height: 100%;
-      border-top: 1px solid #f1f1f1;
-      border-bottom: 1px solid #f1f1f1;
       border-right: solid transparent;
       border-left: solid transparent;
       z-index: 1;
