--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -134,11 +134,11 @@ nav {
     .home-navlist {
       ul {
         li:nth-child(1) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
@@ -175,11 +175,11 @@ nav {
         }
 
         li:nth-child(2) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
@@ -216,11 +216,11 @@ nav {
         }
 
         li:nth-child(3) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
@@ -261,11 +261,11 @@ nav {
     .navlist {
       ul {
         li:nth-child(1) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
@@ -302,11 +302,11 @@ nav {
         }
 
         li:nth-child(2) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
@@ -343,11 +343,11 @@ nav {
         }
 
         li:nth-child(3) {
-          transform: translateY(20px);
-          -webkit-transform: translateY(20px);
-          -moz-transform: translateY(20px);
-          -ms-transform: translateY(20px);
-          -o-transform: translateY(20px);
+          // transform: translateY(20px);
+          // -webkit-transform: translateY(20px);
+          // -moz-transform: translateY(20px);
+          // -ms-transform: translateY(20px);
+          // -o-transform: translateY(20px);
           a {
             position: relative;
 
