--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,9 +4,9 @@ html {
 
 .contributions {
   .grid-div {
-    .presently,
-    .memoji,
-    .desktop-mockup {
+    .presently-container,
+    .memoji-container,
+    .desktop-mockup-container {
       border: 1px solid #333333;
     }
   }
