--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -142,6 +142,10 @@ footer {
   visibility: visible;
 }
 
+.vertical-line {
+  background-color: #404040;
+}
+
 
 ::-webkit-scrollbar {
     width: 10px;
