--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -142,9 +142,9 @@ footer {
   visibility: visible;
 }
 
-.vertical-line {
-  background-color: #404040;
-}
+// .vertical-line {
+//   background-color: #404040;
+// }
 
 
 ::-webkit-scrollbar {
