--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -162,3 +162,7 @@ footer {
 ::-webkit-scrollbar-track-piece:vertical:end {
     background: transparent;
 }
+
+.works .circle-cont:nth-child(2){
+  margin-top: 30%;
+}
