--- a/src/sass/cursor.scss
+++ b/src/sass/cursor.scss
@@ -1,3 +1,32 @@
+.hover-reveal {
+  position: absolute;
+  z-index: -1;
+  width: 400px;
+  height: 400px;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.hover-reveal__inner {
+  overflow: hidden;
+}
+
+.hover-reveal__inner,
+.hover-reveal__video {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.hover-reveal__video {
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+
+
 .cursor {
   position: fixed;
   top: 0px;
