--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,7 +6,11 @@ html {
   .grid-div {
     .presently-container,
     .memoji-container,
-    .desktop-mockup-container {
+    .desktop-mockup-container,
+     .flat-map-container,
+      .world-map-container,
+      .win-11-container,
+      .see-more-container {
       border: 1px solid #333333;
     }
   }
