--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -471,6 +471,8 @@ nav {
       left: 0;
       width: 100%;
       height: 1px;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
       transition: 500ms;
       -webkit-transition: 500ms;
       -moz-transition: 500ms;
