--- a/src/sass/texts.scss
+++ b/src/sass/texts.scss
@@ -274,7 +274,6 @@ nav {
               position: absolute;
               width: 0%;
               height: 1px;
-              // background-color: white;
               bottom: -30%;
               left: 50%;
               transition: 0.3s ease-in-out;
@@ -289,7 +288,6 @@ nav {
               position: absolute;
               width: 100%;
               height: 1px;
-              background-color: white;
               bottom: -30%;
               left: 0;
               transition: 0.3s ease-in-out;
@@ -315,7 +313,6 @@ nav {
               position: absolute;
               width: 0%;
               height: 1px;
-              background-color: white;
               bottom: -30%;
               left: 50%;
               transition: 0.3s ease-in-out;
@@ -330,7 +327,6 @@ nav {
               position: absolute;
               width: 100%;
               height: 1px;
-              background-color: white;
               bottom: -30%;
               left: 0;
               transition: 0.3s ease-in-out;
@@ -356,7 +352,6 @@ nav {
               position: absolute;
               width: 0%;
               height: 1px;
-              background-color: white;
               bottom: -30%;
               left: 50%;
               transition: 0.3s ease-in-out;
@@ -371,7 +366,6 @@ nav {
               position: absolute;
               width: 100%;
               height: 1px;
-              background-color: white;
               bottom: -30%;
               left: 0;
               transition: 0.3s ease-in-out;
@@ -471,8 +465,8 @@ nav {
       left: 0;
       width: 100%;
       height: 1px;
-      border-top: 1px solid white;
-      border-bottom: 1px solid white;
+      border-top: 1px solid ;
+      border-bottom: 1px solid ;
       transition: 500ms;
       -webkit-transition: 500ms;
       -moz-transition: 500ms;
